--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://brew.boreddev.nl">
+    <meta property="og:title" content="Brew Kernel">
+    <meta property="og:description" content="A x86_64 kernel made from scratch, by just one person.">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Brew Kernel">
+    <meta name="twitter:description" content="A x86_64 kernel made from scratch, by just one person.">
     <title>Brew Kernel - A Simple x86_64 Kernel</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/themes/prism-tomorrow.min.css">
