--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <div class="hero">
         <div class="container">
-            <img src="asciiart.png" alt="Brew Kernel ASCII Art" class="hero-image">
+            <img src="https://raw.githubusercontent.com/BoredDevHQ/brew.boreddev.nl/main/asciiart.png" alt="Brew Kernel ASCII Art" class="hero-image">
             <h1><span id="typewriter"></span><span class="cursor">|</span></h1>
             <p class="subtitle">A X86_64 kernel from scratch made by just one person.</p>
             <div class="cta-buttons">
