--- a/index.html
+++ b/index.html
@@ -3,13 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://brew.boreddev.nl">
-    <meta property="og:title" content="Brew Kernel">
-    <meta property="og:description" content="A x86_64 kernel made from scratch, by just one person.">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Brew Kernel">
-    <meta name="twitter:description" content="A x86_64 kernel made from scratch, by just one person.">
     <title>Brew Kernel - A Simple x86_64 Kernel</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/themes/prism-tomorrow.min.css">
@@ -26,14 +19,18 @@
 
     <div class="hero">
         <div class="container">
-            <img src="https://raw.githubusercontent.com/BoredDevHQ/brew.boreddev.nl/main/asciiart.png" alt="Brew Kernel ASCII Art" class="hero-image">
+            <img src="asciiart.png" alt="Brew Kernel ASCII Art" class="hero-image">
             <h1><span id="typewriter"></span><span class="cursor">|</span></h1>
             <p class="subtitle">A X86_64 kernel from scratch made by just one person.</p>
             <div class="cta-buttons">
                 <a href="#features" class="button primary"><i class="fas fa-coffee fa-sm"></i>&nbsp; Learn More</a>
-                <a href="https://github.com/boreddevhq/brewkernel" class="button secondary"><i class="fab fa-github fa-sm"></i>&nbsp; View on GitHub</a>
+                <a href="https://github.com/boreddevhq/brew-kernel" class="button secondary"><i class="fab fa-github fa-sm"></i>&nbsp; View on GitHub</a>
             </div>
         </div>
+        <div class="scroll-indicator">
+            <div class="text">Scroll Down</div>
+            <div class="icon"></div>
+          </div>
     </div>
 
     <main class="container">
