--- a/index.html
+++ b/index.html
@@ -57,6 +57,57 @@
                     <h3>Hardware Ready</h3>
                     <p>Runs on actual x86_64 hardware</p>
                 </div>
+                <div class="feature-card">
+                    <div class="feature-icon"><i class="fas fa-terminal"></i></div>
+                    <h3>Simple CLI</h3>
+                    <p>A basic shell to interact with the kernel.</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon"><i class="fas fa-keyboard"></i></div>
+                    <h3>PS/2 Keyboard Driver</h3>
+                    <p>Handles key presses, including modifier keys like Shift.</p>
+                </div>
+            </div>
+        </section>
+
+        <section id="cli" class="technical">
+            <h2>Command-Line Interface (CLI)</h2>
+            <div class="tech-grid">
+                <div class="tech-card">
+                    <h3>How to Use</h3>
+                    <p>Upon boot, you can type 'CLI' and press Enter to start the command-line interface. Once in the CLI, you can type commands followed by Enter. Commands are case-insensitive.</p>
+                </div>
+            </div>
+            <h3>Available Commands</h3>
+            <div class="tech-grid">
+                <div class="tech-card">
+                    <h4>HELP</h4>
+                    <p>Displays a short list of available commands.</p>
+                </div>
+                <div class="tech-card">
+                    <h4>MAN</h4>
+                    <p>Shows this detailed user manual. Use UP/DOWN arrow keys to scroll and 'q' to quit the manual viewer.</p>
+                </div>
+                <div class="tech-card">
+                    <h4>ABOUT</h4>
+                    <p>Displays information about the kernel, including version, build date, architecture, and compiler.</p>
+                </div>
+                <div class="tech-card">
+                    <h4>MATH</h4>
+                    <p>A simple calculator for basic arithmetic operations (add, subtract, multiply, divide) on integers.</p>
+                </div>
+                <div class="tech-card">
+                    <h4>CLEAR</h4>
+                    <p>Clears the entire screen and moves the cursor to the top-left.</p>
+                </div>
+                <div class="tech-card">
+                    <h4>EXIT</h4>
+                    <p>Exits the CLI mode and returns to the initial kernel screen.</p>
+                </div>
+                <div class="tech-card">
+                    <h4>LICENSE</h4>
+                    <p>Displays the full GNU General Public License v3, under which BrewKernel is distributed. Use UP/DOWN to scroll, 'q' to quit.</p>
+                </div>
             </div>
         </section>
 
