--- a/index.html
+++ b/index.html
@@ -108,6 +108,10 @@
                     <h4>LICENSE</h4>
                     <p>Displays the full GNU General Public License v3, under which BrewKernel is distributed. Use UP/DOWN to scroll, 'q' to quit.</p>
                 </div>
+                <div class="tech-card">
+                    <h4>UPTIME</h4>
+                    <p>Shows how long the system has been running since boot.</p>
+                </div>                
             </div>
         </section>
 
