--- a/manual.html
+++ b/manual.html
@@ -126,7 +126,7 @@ VGA Buffer: 0xB8000</div>
                 <li>VGA Text Mode Driver: Full control over text and background colors.</li>
                 <li>PS/2 Keyboard Driver: Handles key presses, including modifier keys like Shift.</li>
                 <li>Simple CLI: A basic shell to interact with the kernel.</li>
-                <li>Command History (sort of): The last entered command remains in the buffer but is not yet a full history feature.</li>
+                <li>Command History (Use arrow keys to select previous commands).</li>
             </ul>
         </div>
 
