--- a/index.html
+++ b/index.html
@@ -112,6 +112,10 @@
                     <h4>UPTIME</h4>
                     <p>Shows how long the system has been running since boot.</p>
                 </div>                
+                <div class="tech-card">
+                    <h4>TXTEDIT</h4>
+                    <p>Launches the Brew text editor (saves files in RAM).</p>
+                </div>                  
             </div>
         </section>
 
